routes/api-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /api1
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: apiproduct-1
        namespace: default
    - matches:  
      - path:
          type: PathPrefix
          value: /api2
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: apiproduct-2
        namespace: default
