routes/apiproduct-1-httproute-1.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: apiproduct-1
  namespace: default
  labels:
    app: apis
  annotations:
    delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httpbin
        namespace: default
      # - name: httpbin
      #   namespace: httpbin
      #   port: 8000
